# url-shortener

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 001_init.sql
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs
src/handler/: mod.rs
src/model/: mod.rs
tests/: api_test.rs
